--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LTR3MG2DDB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
         gtag('config', 'G-LTR3MG2DDB');
@@ -28,7 +32,7 @@
 </head>
 <body>
 
-<model-viewer bounds="tight" src="scene-1.glb"
+<model-viewer bounds="tight" src="Horse.glb"
               camera-controls camera-orbit="75deg 75deg 5.5m"
               ar ar-modes="webxr scene-viewer quick-look"
               camera-controls environment-image="neutral" poster="poster.webp" shadow-intensity="1" autoplay>
@@ -95,13 +99,13 @@
     ̷̧̩͙̯̯͎̗̃́̉̇à̶̩̯͓̞͊̑́̌̓̒̚ǵ̵̛̬̳̯̀̐͂ǫ̵̗̹͖͎͓̝̗̟̊͊̈́̆̌̏̂̄̒̕ͅ<img src="ppppp.png" alt="ǵ̵̛̬̳̯̀̐͂" width="1024">
 </div>
 
-<iframe width="100%" height="105" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1102302526&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1170413248&color=%23ff5500&inverse=false&auto_play=true&show_user=true"></iframe>
 <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
     <a href="https://soundcloud.com/getschwifty" title="saschxa" target="_blank"
        style="color: #cccccc; text-decoration: none;">saschxa</a> · <a
-        href="https://soundcloud.com/getschwifty/deutsche-post-punk-live" title="deutsche post punk live"
-        target="_blank" style="color: #cccccc; text-decoration: none;">deutsche post punk live</a></div>
+        href="https://soundcloud.com/getschwifty/6-oh-look-its-fleamercato" title="6) Oh Look, It&#x27;s Fleamercato!!!"
+        target="_blank" style="color: #cccccc; text-decoration: none;">6) Oh Look, It&#x27;s Fleamercato!!!</a></div>
 
 <div class="content">
     <h1 class="header" style="float: right;">STAY
